Update to include Additional Data
Previously created Additional Data folder to hold .dta files (and xls in the PHL case) that are the added info used in the harmonization other than raw data.

Here:

* added extra files hitherto not in there
* added info and explanation in CSDs
* corrected the links to account for the additional folder

--- a/Support/B - Country Survey Details/BRA/PNADC/1. Introduction to PNADC.md
+++ b/Support/B - Country Survey Details/BRA/PNADC/1. Introduction to PNADC.md
@@ -71,6 +71,6 @@ The only differences in the case of CNAE Domiciliar is the recoding of `industry
 
 Additionally, and exceptionally, another coding of ISCO and ISIC was done. Due to previous work on the PNAD survey a unified coding in line with the 1.0 version of CBO and CNAE used there was done to map to ISCO-88 and ISIC Rev 3.
 
-This means that, in addition to `industrycat_isic` (coded on ISIC Rev 4 as per `isic_version`) and ocup_isco (coded to ISCO 2008 as per `isco version`) as well as their secondary job counterparts there are variables `industrycat_isic_30` and `occup_isco_88` coding information to ISIC Rev 3 and ISCO 1988. To do so, the harmonization builds on [this correspondence file for industry](utilities/Ind_Corresp_2010s.dta) and [this correspondence file for occupations](utilities/isco_88_cod_DD.dta).
+This means that, in addition to `industrycat_isic` (coded on ISIC Rev 4 as per `isic_version`) and ocup_isco (coded to ISCO 2008 as per `isco version`) as well as their secondary job counterparts there are variables `industrycat_isic_30` and `occup_isco_88` coding information to ISIC Rev 3 and ISCO 1988. To do so, the harmonization builds on [this correspondence file for industry](utilities/Additional%20Data/Ind_Corresp_2010s.dta) and [this correspondence file for occupations](utilities/Additional%20Data/isco_88_cod_DD.dta).
 
 More details on the correspondence to ISCO-88 and ISIC REv 3 can be found [here](../PNAD/Correspondence%20between%20PNAD%20occupation%20classification%20and%20ISCO.md) and [here](../PNAD/Correspondence%20between%20PNAD%20industry%20classification%20and%20ISIC.md) respectively, in the documents for [PNAD](../PNAD/1.%20Introduction%20to%20PNAD.md)
