--- a/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
+++ b/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
@@ -27,9 +27,9 @@ The data can be downloaded freely from the [Download Tables Data section](https:
 
 ## What is the sampling procedure?
 
-The PLFS uses a stratified two stage sampling procedure. The exact details are given in the annual reports of each survey (e.g., which year’s census was used to draw the primary sampling units). For precise details please review these. The following is a general introduction to the methodology. 
+The PLFS uses a stratified two stage sampling procedure. The exact details are given in the annual reports of each survey (e.g., which year’s census was used to draw the primary sampling units). For precise details please review these. The following is a general introduction to the methodology.
 
-For the PLFS, the primary sampling units (PSUs) are, in rural areas, the census villages, in urban areas the blocks of the [Urban Frame Survey](http://mospi.nic.in/urban-frame-surveyufs), with urban PSUs further stratified by population size. PSUs are drawn with probability proportional to size. 
+For the PLFS, the primary sampling units (PSUs) are, in rural areas, the census villages, in urban areas the blocks of the [Urban Frame Survey](http://mospi.nic.in/urban-frame-surveyufs), with urban PSUs further stratified by population size. PSUs are drawn with probability proportional to size.
 
 The households represent the second stage sampling unit. 8 households, stratified by the number of members of secondary education in the household are selected per random sampling for each PSU.
 
@@ -56,7 +56,7 @@ The report on the first PLFS from 2017 compares the sampling methodologies for t
 The PLFS data is coded using NIC-2008 codes for industry and NCO-2004 codes for occupation. NIC-2008 codes are five-digit codes whose first four are equivalent with ISIC-4 and the last one is used, wherever necessary to adapt to the Indian context. Hence no correspondence tables are necessary to translate the information to ISIC-4.
 NCO-2004, on the other hand is not directly linked to the international occupation system ISCO. The harmonization team could not find any correspondence tables on the MOSPI website. Hence the method used was to rely on the correspondence develop by Mses. Saloni Khurana and Kanika Mahajan in their [technical appendix](utilities/NCO_concordance.pdf) to their paper [Evolution of wage inequality in India (1983-2017)](utilities/wp2020-167.pdf). The harmonization team is thankful to them for their research and kindness in sharing their work.
 
-The technical appendix consists of two tables. The first is the concordance between NCO 1968 and NCO 2004. The second details the concordance between NCO 2004 and ISCO-88. The PDF we [convert into an Excel file](utilities/occupation_correspondences.xlsx). [This R code](utilities/convert_occup_concordance_to_dta.R) produces two `dta` files. One for mapping from older NCO versions (necessary for EUS, but not PLFS) and the [India_nco_04_to_isco_88.dta](utilities/India_nco_04_to_isco_88.dta) file used in the harmonization code to convert from NCO 2004 to ISCO-88.
+The technical appendix consists of two tables. The first is the concordance between NCO 1968 and NCO 2004. The second details the concordance between NCO 2004 and ISCO-88. The PDF we [convert into an Excel file](utilities/occupation_correspondences.xlsx). [This R code](utilities/convert_occup_concordance_to_dta.R) produces two `dta` files. One for mapping from older NCO versions (necessary for EUS, but not PLFS) and the [India_nco_04_to_isco_88.dta](utilities/Additional%20Data/India_nco_04_to_isco_88.dta) file used in the harmonization code to convert from NCO 2004 to ISCO-88.
 Text
 
 ### Changes in states over time
@@ -68,7 +68,7 @@ In the intervening years between the last EUS survey in 2011 and the first PLFS 
 
 The PLFS does not directly ask respondents about their employment but rather asks about *usual principal activity* and their *subsidiary economic activity*. In such a situation, a full-time university student who works on the weekends at a petrol station, for example, would classify their principal activity as student. If we were to use only principal activity, we would code this individual as out of the labour force, missing the fact that they are employed as per their subsidiary economic activity.
 
-Moreover, the PLFS asks employment questions both over the 12-month and the 7-day recall period. Some employment codes (e.g., differentiating between unemployed who is looking for a job and available to work or just available to work but not looking), are only available for one of the recall periods. 
+Moreover, the PLFS asks employment questions both over the 12-month and the 7-day recall period. Some employment codes (e.g., differentiating between unemployed who is looking for a job and available to work or just available to work but not looking), are only available for one of the recall periods.
 
 The details of these definitions are [covered separately in another document](Definitions_of_employment_over_recall_periods.md)
 
