--- a/Support/B - Country Survey Details/PHL/LFS/1.--Introduction-to-PHL.md
+++ b/Support/B - Country Survey Details/PHL/LFS/1.--Introduction-to-PHL.md
@@ -10,6 +10,7 @@
         procedure?](#what-is-the-sampling-procedure)
     -   [What is the significance
         level?](#what-is-the-significance-level)
+    -   [Appending quarterly files](#appending-quarterly-files)
     -   [Other Documentation Files](#other-documentation-files)
 
 # Introduction to Philippines Labor Force Survey (PHL LFS)
@@ -63,6 +64,16 @@ A thorough explanation of the general sampling scheme is available from the [Phi
 ## What is the significance level?
 
 The primary significance level is the Province or first administrative disaggregation, [see](https://psa.gov.ph/sites/default/files/ISHB%20-%20Labor%20Force%20Series%20No.161%20July%202014.pdf).
+
+## Appending quarterly files
+
+The PHL LFS is released as quarterly data. The GLD does not always have access to all quarters. Reviewing the variable `int_month` will reveal the quarters included (where January stands for Q1, April for Q2, July for Q3, and October for Q4).
+
+Additionally, and more importantly, the raw data obtained does have different variable names for the same questionnaire variables from one quarter to the next. For example, region information is coded in Q1 of 2007 as `w_regn`, while the variable in Q2 of 2007 is `reg`.
+
+That is why the harmonization for the PHL LFS uses the `ietoolkit` suite of functions developed by our colleagues at [Development Impact Evaluation - DIME](https://github.com/worldbank/ietoolkit).
+
+The necessary Excel files to unify the different quarters which the harmonization code reads in [are available here](utilities/Additional%20Data/Appending%20Excel%20Files).
 
 ## Other Documentation Files
 
