--- a/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
+++ b/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
@@ -9,14 +9,14 @@
 
 ## What is the PAK LFS?
 
-The Pakistan Labor Force Survey (LFS) is a household-based sample survey conducted by the Federal Bureau of Statistics of Pakistan (BPS) regularly since 1963. This survey was firstly undertaken on quarterly basis in 2005; and became representative at district urban/rural level in 2020. 
+The Pakistan Labor Force Survey (LFS) is a household-based sample survey conducted by the Federal Bureau of Statistics of Pakistan (BPS) regularly since 1963. This survey was firstly undertaken on quarterly basis in 2005; and became representative at district urban/rural level in 2020.
 
 
 ## What does the PAK LFS cover?
 
-The PAK LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days. Since 1999, LFS began to include information on households' immigration status, such as whether a given household has migrated or not. Years used for harmonization range from 1992 to 2020 discontinuously, 15 years in total. 
+The PAK LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days. Since 1999, LFS began to include information on households' immigration status, such as whether a given household has migrated or not. Years used for harmonization range from 1992 to 2020 discontinuously, 15 years in total.
 
-Years and sample size of LFS harmonized for GLD are: 
+Years and sample size of LFS harmonized for GLD are:
 
 | **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	| **Officially Reported Sample Size(# HH)**	|
 | :------:	| :-------:		| :-------:	 	| :-------:	 	| :-------:	 	|
@@ -36,7 +36,7 @@ Years and sample size of LFS harmonized for GLD are:
 | 2018  | 40,963        | 257,054      |  203,261,919 |  41,184 |
 | 2020  | 96,440        | 570,991      |  207,976,697 |  99,904 |
 
-1992 and 2009 do not have annual reports publicly available online, therefore, official number of sample size for these two years are missing. 
+1992 and 2009 do not have annual reports publicly available online, therefore, official number of sample size for these two years are missing.
 
 Note that the number of households in our harmonized datasets do not equal the number of sample size in each year's annual report. We follow [coding scheme](coding_LFS_2017-18) by the BPS to code household identification variable `hhid`, which produces number of households. Though no observation dropped in any year, numbers we got differ from those in the annual reports for unknown reasons. Coding scheme documentation is an official guide that provides detailed information on how to use the original variable `PrCode`, process code, to get information on urban/rural status, household number, province, stratum etc. from a certain digit of the variable.  
 
@@ -47,10 +47,10 @@ The microdata of LFS from 2009 are publicly available on the official website of
 
 ## What is the sampling procedure?
 
-LFS uses a two-stage cluster sampling method in general, which includes two steps: 1) selecting the primary sampling units (PSU), which are enumeration blocks in both urban and rural domains 2) selecting the secondary sampling units, which include listed households of sample PSUs. The first year of the GLD, 1992, is only nationally representative at urban/rural level; the last year of harmonization, 2020, is the only year that has district level of representativeness; and all years in between are representative at rural/urban level of the province. 
+LFS uses a two-stage cluster sampling method in general, which includes two steps: 1) selecting the primary sampling units (PSU), which are enumeration blocks in both urban and rural domains 2) selecting the secondary sampling units, which include listed households of sample PSUs. The first year of the GLD, 1992, is only nationally representative at urban/rural level; the last year of harmonization, 2020, is the only year that has district level of representativeness; and all years in between are representative at rural/urban level of the province.
 
 More details of the sampling frame & procedure are included in each year's annual report. Here is an example of [LFS 2020](https://www.pbs.gov.pk/sites/default/files/labour_force/publications/lfs2020_21/LFS_2020-21_Report.pdf) (page 19/20 of the PDF):
-   
+
 ```
 Universe: The universe for Labour Force Survey consists of all urban and rural areas of the four provinces of Pakistan and Islamabad excluding military restricted areas. The population of excluded areas constitutes about 1% of the total population.
 
@@ -68,8 +68,8 @@ Selection of secondary sampling units (SSUs)
 The listed households of sample PSUs are taken as Secondary Sampling Units (SSUs). A specified number of households i.e. 12 from each urban sample PSU and 16 from rural sample PSU are selected with equal probability using systematic sampling technique with a random start.
 
 ```    
-  
-  
+
+
 ## What is the geographic significance level?
 
 ****************
@@ -80,22 +80,22 @@ Also: for 2005 onward at least it is province + urban / rural
 
 The official reports detailed results by gender, sector (i.e. urban or rural), and the four main provinces in Pakistan – Punjab, Sindh, the North-West Frontier Province(N.W.F.P.), and Balochistan. Among the raw datasets of all LFSs, 2010, 2014, 2017, and 2018 are the only four years that contain more than the four major provinces. The table below shows provinces included in each year and the geographic significance level.
 
-| **Year**	| **Province Covered**	| **Historical Change**	| 
-| :------:	| :-------------------: | :-------------------:	| 
+| **Year**	| **Province Covered**	| **Historical Change**	|
+| :------:	| :-------------------: | :-------------------:	|
 | 1992  | Punjab/Sindh/NWFP/Balochistan | N/A |  
 | 1999  | Punjab/Sindh/NWFP/Balochistan | N/A |  
-| 2001  | Punjab/Sindh/NWFP/Balochistan | N/A | 
-| 2003  | Punjab/Sindh/NWFP/Balochistan | N/A | 
-| 2005  | Punjab/Sindh/NWFP/Balochistan | N/A | 
+| 2001  | Punjab/Sindh/NWFP/Balochistan | N/A |
+| 2003  | Punjab/Sindh/NWFP/Balochistan | N/A |
+| 2005  | Punjab/Sindh/NWFP/Balochistan | N/A |
 | 2007  | Punjab/Sindh/NWFP/Balochistan | N/A |
 | 2008  | Punjab/Sindh/NWFP/Balochistan | N/A |  
 | 2009  | Punjab/Sindh/NWFP/Balochistan | N/A |  
 | 2010  | Punjab/Sindh/KP/Balochistan/AK,Kashmir/GB | The name of NWFP changed to Khyber Pakhtunkhwa (or K/P province)|  
 | 2012  | Punjab/Sindh/NWFP/Balochistan | N/A |  
-| 2013  | Punjab/Sindh/NWFP/Balochistan | N/A | 
-| 2014  | Punjab/Sindh/KP/Balochistan/Islamabad| N/A | 
-| 2017  | Punjab/Sindh/KP/Balochistan/Islamabad| N/A | 
-| 2018  | Punjab/Sindh/KP/Balochistan/Islamabad| Federally Administered Tribal Areas, or "FATA" was merged into K/P| 
+| 2013  | Punjab/Sindh/NWFP/Balochistan | N/A |
+| 2014  | Punjab/Sindh/KP/Balochistan/Islamabad| N/A |
+| 2017  | Punjab/Sindh/KP/Balochistan/Islamabad| N/A |
+| 2018  | Punjab/Sindh/KP/Balochistan/Islamabad| Federally Administered Tribal Areas, or "FATA" was merged into K/P|
 | 2020  | Punjab/Sindh/KP/Balochistan   | N/A |  
 
 
@@ -108,28 +108,28 @@ LFS has its own conception and definition documentation for variables. These doc
 
 Earlier years before 2012 are coded slightly differently from other years as they have less labor questions. A more comprehensive explanation of the harmonization choices [is covered here in a separate document](Labor_Status_and_Labor_Force_Participation.md).    
 
-        
+
 ### Coding of industry and occupation codes
 
-Regarding industrial classification, 3 versions of Pakistani Standard Industrial Classification (PSIC) were involved from 1992 to 2020 – PSIC 1970, 2007, 2010. They are based on different versions of ISIC and were used in different years of LFS. in the [separate document.](Correspondence_National_International_Classifications.md) 
+Regarding industrial classification, 3 versions of Pakistani Standard Industrial Classification (PSIC) were involved from 1992 to 2020 – PSIC 1970, 2007, 2010. They are based on different versions of ISIC and were used in different years of LFS. in the [separate document.](Correspondence_National_International_Classifications.md)
 
-Although three versions of Pakistani Standard Occupational Codes (PSCO) were involved – PSCO 1994, 2011, and 2015, they are based on two versions of international standards which are ISCO 1988 AND 2008. PSCO 1994 follows ISCO 1988 whereas PSCO 2011 and 2015 follow ISCO 2008. 
+Although three versions of Pakistani Standard Occupational Codes (PSCO) were involved – PSCO 1994, 2011, and 2015, they are based on two versions of international standards which are ISCO 1988 AND 2008. PSCO 1994 follows ISCO 1988 whereas PSCO 2011 and 2015 follow ISCO 2008.
 
-In general, each single version of national standards, regardless of industry or occupation, is almost identical to their international counterparts at two-digit level. Details about industrial and occuaptional mappings are covered in this [separate document.](Correspondence_National_International_Classifications.md) 
+In general, each single version of national standards, regardless of industry or occupation, is almost identical to their international counterparts at two-digit level. Details about industrial and occuaptional mappings are covered in this [separate document.](Correspondence_National_International_Classifications.md)
 
 
 ### Helper files for district, migration country, and training field coding
 
-We created several codelist for `subnatid2`, `migrated_from_code`, and `vocational_field_orig` according to PBS's coding scheme for each year. These files and their use can be found in the table below. 
+We created several codelist for `subnatid2`, `migrated_from_code`, and `vocational_field_orig` according to PBS's coding scheme for each year. These files and their use can be found in the table below.
 
-| **Document**	| **Description**	| **Referrence**| 
+| **Document**	| **Description**	| **Referrence**|
 | :---------:	| :-------------: | :-----------: |   
-| [PAK_city_code](utilities/helper/PAK_city_code.dta) | A code list containing four-digit codes, names, and urban status of districts covered in the raw dataset for years before 2012. It was used for harmonizing the GLD variable "subnatid2".| [LFS Coding Scheme pre-2012](utilities/helper/LFS%20Coding%20Scheme%202010-11.pdf)|    
-| [PAK_city_code_2012](utilities/helper/PAK_city_code_2012.dta)  | A code list containing four-digit codes and names of districts covered in the raw dataset for 2012. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2012](utilities/helper/LFS%20CODE%202012-13.pdf)| 
-| [PAK_city_code_2013](utilities/helper/PAK_city_code_2013.dta)  | A code list containing four-digit codes and names of districts covered in the raw dataset for 2013. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2013](utilities/helper/LFS%20CODE%202012-13.pdf)|   
-| [PAK_city_code_2014](utilities/helper/PAK_city_code_2014.dta)  | A code list containing four-digit codes, names, and urban status of districts covered in the raw dataset for 2014. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2014](utilities/helper/LFS%20Coding%202014-15.pdf)|    
-| [PAK_country_code_2020](utilities/helper/PAK_country_code_2020.dta)  | A code list containing names, Pakistan's national four-digit codes and their corresponding three-letter ISO codes of countries from which respondents migrated in the raw dataset for 2020. It was used for harmonizing the GLD variable "migrated_from_country".|[District & Country](utilities/helper/District_and_Country_Codes.pdf)| 
-| [PAK_migration_code_2020](utilities/helper/PAK_migration_code_2020.dta)  | A code list containing names and codes of districts or countries from which respondents migrated in the raw dataset for 2020. The districts in this dataset were used for harmonizing the GLD variable "migrated_from_code".|[District](utilities/helper/Coding_Scheme_LFS_2020-21_Districts_Codes.pdf)| 
-| [PAK_training_code](utilities/helper/PAK_training_code.dta)  | A code list containing the codes and names of the type of vocational training. It was used for harmonizing GLD variable "vocational_field_orig" for years 2009-2018.|[Training pre-2020](utilities/helper/MANUAL%202018-19.pdf)| 
-| [PAK_training_code_2020](utilities/helper/PAK_training_code_2020.dta) | A code list containing the codes and names of the type of vocational training. It was used for harmonizing GLD variable "vocational_field_orig" for 2020.|[Training 2020](utilities/helper/List_of_Technical_Vocational_Training_Courses.pdf)|    
-| [PAK_subnatid2_code_2020](utilities/helper/PAK_subnatid2_code_2020.dta)  |A code list containing three-digit codes and names of districts covered in the raw dataset for 2020. It was used for harmonizing the GLD variable "subnatid2".|[District](utilities/helper/Coding_Scheme_LFS_2020-21_Districts_Codes.pdf)|
+| [PAK_city_code](utilities/Additional%20Data/PAK_city_code.dta) | A code list containing four-digit codes, names, and urban status of districts covered in the raw dataset for years before 2012. It was used for harmonizing the GLD variable "subnatid2".| [LFS Coding Scheme pre-2012](utilities/Additional%20Data/LFS%20Coding%20Scheme%202010-11.pdf)|    
+| [PAK_city_code_2012](utilities/Additional%20Data/PAK_city_code_2012.dta)  | A code list containing four-digit codes and names of districts covered in the raw dataset for 2012. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2012](utilities/Additional%20Data/LFS%20CODE%202012-13.pdf)|
+| [PAK_city_code_2013](utilities/Additional%20Data/PAK_city_code_2013.dta)  | A code list containing four-digit codes and names of districts covered in the raw dataset for 2013. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2013](utilities/Additional%20Data/LFS%20CODE%202012-13.pdf)|   
+| [PAK_city_code_2014](utilities/Additional%20Data/PAK_city_code_2014.dta)  | A code list containing four-digit codes, names, and urban status of districts covered in the raw dataset for 2014. It was used for harmonizing the GLD variable "subnatid2".|[LFS Coding Scheme 2014](utilities/Additional%20Data/LFS%20Coding%202014-15.pdf)|    
+| [PAK_country_code_2020](utilities/Additional%20Data/PAK_country_code_2020.dta)  | A code list containing names, Pakistan's national four-digit codes and their corresponding three-letter ISO codes of countries from which respondents migrated in the raw dataset for 2020. It was used for harmonizing the GLD variable "migrated_from_country".|[District & Country](utilities/Additional%20Data/District_and_Country_Codes.pdf)|
+| [PAK_migration_code_2020](utilities/Additional%20Data/PAK_migration_code_2020.dta)  | A code list containing names and codes of districts or countries from which respondents migrated in the raw dataset for 2020. The districts in this dataset were used for harmonizing the GLD variable "migrated_from_code".|[District](utilities/Additional%20Data/Coding_Scheme_LFS_2020-21_Districts_Codes.pdf)|
+| [PAK_training_code](utilities/Additional%20Data/PAK_training_code.dta)  | A code list containing the codes and names of the type of vocational training. It was used for harmonizing GLD variable "vocational_field_orig" for years 2009-2018.|[Training pre-2020](utilities/Additional%20Data/MANUAL%202018-19.pdf)|
+| [PAK_training_code_2020](utilities/Additional%20Data/PAK_training_code_2020.dta) | A code list containing the codes and names of the type of vocational training. It was used for harmonizing GLD variable "vocational_field_orig" for 2020.|[Training 2020](utilities/Additional%20Data/List_of_Technical_Vocational_Training_Courses.pdf)|    
+| [PAK_subnatid2_code_2020](utilities/Additional%20Data/PAK_subnatid2_code_2020.dta)  |A code list containing three-digit codes and names of districts covered in the raw dataset for 2020. It was used for harmonizing the GLD variable "subnatid2".|[District](utilities/Additional%20Data/Coding_Scheme_LFS_2020-21_Districts_Codes.pdf)|
