--- a/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
+++ b/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
@@ -64,6 +64,17 @@ For the purposes of consistency with official reports in terms of breaking down 
 
 Meanwhile, changes in the second administrative level (subnatid2) occur as new regions are created from other existing regions. In May 2002, Manyara region in Mainland Tanzania was split from Arusha. In March 2012, 2 new provinces were created: Njombe (from Iringa region), and Katavi (from Rukwa). Also, districts were re-assigned to different regions. Simiyu and Geita each had four districts that were transferred to Shinyanga, a district of Simiyu to Mwanza, and a district of Geita to Kagera.
 
+### Industry and occupation
 
+### Education recodes
+-
+-
+### Minimum age changes for education, labor and migration modules
+- in 2000, this is 10 years old for 
+- in 2006 onwards, 5 years old for all
+### Change in survey definition of economic activity
 
-
+### Wage variable
+- that this includes net business income of employers and self-employed. Caution is needed in making conclusions based on these sub-groups. 
+- as this are expressed in net terms, there are cases of negative values (show this in a table). These income values are based on the past month prior to the interview
+- to capture only income of wage employees, add the condition: empstat = 1
