Update 1. Introduction to TZA ILFS.md

--- a/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
+++ b/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
@@ -64,6 +64,8 @@ For the purposes of consistency with official reports in terms of breaking down 
 
 Meanwhile, changes in the second administrative level (subnatid2) occur as new regions are created from other existing regions. In May 2002, Manyara region in Mainland Tanzania was split from Arusha. In March 2012, 2 new provinces were created: Njombe (from Iringa region), and Katavi (from Rukwa). Also, districts were re-assigned to different regions. Simiyu and Geita each had four districts that were transferred to Shinyanga, a district of Simiyu to Mwanza, and a district of Geita to Kagera.
 
+Note: all just scribbles from here
+
 ### Industry and occupation
 
 ### Education recodes
