--- a/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
+++ b/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
@@ -13,7 +13,7 @@
 
 ## What is the TZA ILFS?
 
-The Tanzania (TZA) Integrated Labor Force Survey (ILFS) is a Labor Force Survey conducted by the Tanzania National Bureau of Statistics (NBS). They surveys were conducted in 1990-91, 2000-01, 2006, 2014 and 2020. The harmonization begins with the 2000-01 round where separate surveys have been conducted for Mainland Tanzania (formerly Tanganyika) and the islands of Zanzibar. This has been the practice until 2020 when a unified survey was conducted for both geographic areas.
+The Tanzania (TZA) Integrated Labor Force Survey (ILFS) is a Labor Force Survey conducted by the Tanzania National Bureau of Statistics (NBS). They surveys were conducted in 1990-91, 2000-01, 2006, 2014 and 2020-21. The harmonization begins with the 2000-01 round where separate surveys have been conducted for Mainland Tanzania (formerly Tanganyika) and the islands of Zanzibar. This has been the practice until 2020 when a unified survey was conducted for both geographic areas.
 
 ## What does the TZA ILFS cover?
 
@@ -28,7 +28,7 @@ The harmonized years and sample sizes used in the GLD harmonization are:
 | 2006 (Zanzibar)                | 5,479          | 28,277          |
 | 2014 (Mainland Tanzania)       | 11,472         | 47,199          |
 | 2014 (Zanzibar)                | 6,947          | 36,764          |
-| 2020 (Unified)                 | 15,706         | 74,558          |
+| 2020-21 (Unified)              | 15,706         | 74,558          |
 
 ## Where can the data be found?
 
@@ -50,7 +50,7 @@ The official reports detail results by area of residence. For the rounds that in
 
 ### Household ID
 
-While a household ID variable is available in all rounds, we reconstructed it by combining information on region, district, ward, enumeration area, household ID and line number. 
+While a household ID variable is available in all rounds, the hhid variable in the harmonized datasets are constructed by combining information on region, district, ward, enumeration area, household ID and line number. 
 
 ### Geographic Information
 
@@ -60,7 +60,7 @@ For the purposes of consistency with official reports in terms of breaking down 
 
 &emsp; **(2)	For Zanzibar-only (2006 and 2014):** the whole of Zanzibar 
 
-&emsp; **(3)	Unified survey (2020):** Mainland Tanzania (M-TNZ) Dar es Salaam, M-TNZ other urban, M-TNZ rural, Zanzibar urban and Zanzibar rural.
+&emsp; **(3)	Unified survey (2020-21):** Mainland Tanzania (M-TNZ) Dar es Salaam, M-TNZ other urban, M-TNZ rural, Zanzibar urban and Zanzibar rural.
 
 Meanwhile, changes in the second administrative level (subnatid2) occur as new regions are created from other existing regions. In May 2002, Manyara region in Mainland Tanzania was split from Arusha. In March 2012, 2 new provinces were created: Njombe (from Iringa region), and Katavi (from Rukwa). Also, districts were re-assigned to different regions. Simiyu and Geita each had four districts that were transferred to Shinyanga, a district of Simiyu to Mwanza, and a district of Geita to Kagera.
 
@@ -68,15 +68,24 @@ Note: all just scribbles from here
 
 ### Industry and occupation
 
-### Education recodes
--
--
 ### Minimum age changes for education, labor and migration modules
-- in 2000, this is 10 years old for 
-- in 2006 onwards, 5 years old for all
+
+We defined the minimum age for labor, education and migration modules such that it is consistent with the [ILFS analytical reports] (https://www.nbs.go.tz/index.php/en/census-surveys/labour-statistics). In the 2006, 2014, and 2020-21 datasets, the minimum age for all modules is 5 years old. Meanwhile, in 2000-01 round, we set the minimum age to 10 years old to be consistent with the NBS analytical report. It is worth noting that the 2000-01 ILFS has a separate dataset for the child labor module, which covers children aged 5 - 17. 
+
 ### Change in survey definition of economic activity
 
+
+
 ### Wage variable
-- that this includes net business income of employers and self-employed. Caution is needed in making conclusions based on these sub-groups. 
-- as this are expressed in net terms, there are cases of negative values (show this in a table). These income values are based on the past month prior to the interview
-- to capture only income of wage employees, add the condition: empstat = 1
+
+**Calculating the wave variable.** The wage variable, *wage_no_compen*, includes both wage income of paid employees and net business income of employers and self-employed. The latter is calculated as the difference between gross income and expenses incurred. The ILFS does not make a distinction between income for primary and secondary activities; hence, the *wage_no_compen* likely to be an aggregated income variable. However, we restricted the income values to align with *empstat*. For example, if individual reports paid employment as primary activity, only the cash income from paid employment is captured by the variable, even if the individual reports self-employment income. We are not able to distinguish income if *empstat* is similar to *empstat_2*, thus we are more likely to encounter aggregate income values for these cases.
+
+**Negative values.**  As the latter is expressed as the difference between gross income and expenses, there are individuals reporting negative income. It is possible that it is a temporary situation, for instance, when activity is seasonal. Hence, extra caution is advised when using this value for this sub-group (e.g., when extrapolating annual income).
+
+**Breakdown of self-employment income.** In the surveys, self-employment income is broken down into agricultural and non-agricultural work. For individuals owning a farm, non-agricultural income is set to missing and only agricultural income is considered. The reverse is true for non-farm owners. 
+
+The ILFS 2000-01 is a special case. As shown below, agricultural income is only considered for urban respondents while self-employment outside agriculture is asked for both rural and urban respondents. Thus, income values are missing for rural residents engaged in agriculture. 
+
+![image](Utilities/Survey_nonag_ag.PNG)
+
+
