Update 1. Introduction to TZA ILFS.md

--- a/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
+++ b/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
@@ -58,9 +58,9 @@ For the purposes of consistency with official reports in terms of breaking down 
 
 &emsp; **(1)	For Mainland Tanzania-only (2000, 2006 and 2014):** rural, Dar es Salaam, and other urban
 
-&emsp; **(2)	For Zanzibar-only (2006 and 2014):** the whole of Zanzibar 
+&emsp; **(2)	For Zanzibar-only (2006 and 2014):** the whole of Zanzibar (ZNZ)
 
-&emsp; **(3)	Unified survey (2020-21):** Mainland Tanzania (M-TNZ) Dar es Salaam, M-TNZ other urban, M-TNZ rural, Zanzibar urban and Zanzibar rural.
+&emsp; **(3)	Unified survey (2020-21):** Mainland Tanzania (M-TNZ) Dar es Salaam, M-TNZ other urban, M-TNZ rural, ZNZ urban and ZNZ rural.
 
 Meanwhile, changes in the second administrative level (subnatid2) occur as new regions are created from other existing regions. In May 2002, Manyara region in Mainland Tanzania was split from Arusha. In March 2012, 2 new provinces were created: Njombe (from Iringa region), and Katavi (from Rukwa). Also, districts were re-assigned to different regions. Simiyu and Geita each had four districts that were transferred to Shinyanga, a district of Simiyu to Mwanza, and a district of Geita to Kagera.
 
