Update 1. Introduction to TZA ILFS.md

--- a/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
+++ b/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
@@ -64,16 +64,21 @@ For the purposes of consistency with official reports in terms of breaking down 
 
 Meanwhile, changes in the second administrative level (subnatid2) occur as new regions are created from other existing regions. In May 2002, Manyara region in Mainland Tanzania was split from Arusha. In March 2012, 2 new provinces were created: Njombe (from Iringa region), and Katavi (from Rukwa). Also, districts were re-assigned to different regions. Simiyu and Geita each had four districts that were transferred to Shinyanga, a district of Simiyu to Mwanza, and a district of Geita to Kagera.
 
-Note: all just scribbles from here
+### Industry and Occupation codes in the ILFS
 
-### Industry and occupation
+Industry variables are based on the ISIC version 2 for the 2000-01 round, and version 3 for the 2006 round, and version 4 for the 2014 and 2020-21 rounds. 
+
+Occupation variables are based entirely on the [Tanzanian Standard Classification of Occupations (TASCO)](Utilities/TASCO_CSN_1-10.pdf). The TASCO and ISCO 1988 are equivalent at the 2-digit level with the exception of TASCO codes "5100" and "5200", which are equivalent to ISCO 1988 codes "5200" and "5300", respectively. 
 
 ### Minimum age changes for education, labor and migration modules
 
 We defined the minimum age for labor, education and migration modules such that it is consistent with the [ILFS analytical reports](https://www.nbs.go.tz/index.php/en/census-surveys/labour-statistics). In the 2006, 2014, and 2020-21 datasets, the minimum age for all modules is 5 years old. Meanwhile, in 2000-01 round, we set the minimum age to 10 years old to be consistent with the NBS analytical report. It is worth noting that the 2000-01 ILFS has a separate dataset for the child labor module, which covers children aged 5 - 17. 
 
-### Change in survey definition of economic activity
+### Using information on activities for household consumption
 
+The GLD definition of employed pertains to individuals who are engaged in activities for market production. The ILFS 2020-21 makes a distinction between activities engaged for own consumption and for sale in the market. We use this information to identify the employed individuals for this round.
+
+However, this distinction was not made in the earlier surveys so the size of employed is increased by the individuals who engage in activities for own consumption. As a result, [time series data](Utilities/01_A_1_LFP_over_years.png) show a decrease in the size of employed and labor force participants for the 2020-21 round. 
 
 
 ### Wage variable
