--- a/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
+++ b/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
@@ -13,7 +13,7 @@
 
 ## What is the TZA ILFS?
 
-The Tanzania (TZA) Integrated Labor Force Survey (ILFS) is a Labor Force Survey conducted by the Tanzania National Bureau of Statistics (NBS). They surveys were conducted in 1990-91, 2000-01, 2006, 2014 and 2020-21. The harmonization begins with the 2000-01 round where separate surveys have been conducted for Mainland Tanzania (formerly Tanganyika) and the islands of Zanzibar. This has been the practice until 2020 when a unified survey was conducted for both geographic areas.
+The Tanzania (TZA) Integrated Labor Force Survey (ILFS) is a Labor Force Survey conducted by the Tanzania National Bureau of Statistics (NBS). They surveys were conducted in 1990-91, 2000-01, 2006, 2014 and 2020-21. The harmonization begins with the 2000-01 round where separate surveys have been conducted for Mainland Tanzania and the islands of Zanzibar. This has been the practice until 2020 when a unified survey was conducted for both geographic areas.
 
 ## What does the TZA ILFS cover?
 
@@ -36,17 +36,31 @@ The datasets are not accessible to the public and researchers have to request th
 
 ## What is the sampling procedure?
 
-The ILFS rounds adopted a stratified sampling design. The listing of the villages and enumeration areas, which constitute the primary sampling units, is taken from the National Master Sample.
+The ILFS rounds adopted a two-stage stratified sampling design. The listing of the villages and enumeration areas constitute the primary sampling units and are taken from the National Master Sample.
 
-The first stage determines the primary sampling units (PSUs) but the strata to which these PSUs are selected differ across the surveys. For Mainland-only surveys in 2006 and 2014, select the PSUs by area of residence (i.e., urban or rural). The same strata were used for the unified 2020-21 survey, but Dar-es-Salaam was split from the other urban areas. The process is more nuanced for the 2000-01 survey where the selection of PSUs in urban areas is further classified by income levels (i.e., high, middle and low-income enumeration areas). Meanwhile, Zanzibar-only surveys in 2006 and 2014 sample the PSUs by region and area of residence.  
+The first stage determines the primary sampling units (PSUs) but the strata to which these PSUs are selected differ across the surveys. For Mainland-only surveys in 2006 and 2014, PSUs are stratified by area of residence (i.e., urban or rural). The same strata were used for the unified 2020-21 survey, but Dar-es-Salaam was split from the other urban areas (e.g., three strata in total). The process is more nuanced for the 2000-01 survey where the selection of PSUs in urban areas is further classified by income levels (i.e., high, middle and low-income enumeration areas). Meanwhile, Zanzibar-only surveys in 2006 and 2014 sample the PSUs by region and area of residence (urban v rural). PSU are selected randomly with probability proportional to size.
 
-The second stage determines the households to be sampled in each PSU, which equally allocated to each quarter.  
+The second sampling stage are the households, which are selected at random from a fresh household listing.  
 
 ## What is the significance level?
 
-The official reports detail results by area of residence. For the rounds that include Mainland Tanzania, reporting of urban areas further broken down into Dar es Salaam and other urban areas.
+The official reports detail results by area of residence. These are:
+
+- Dar es Salaam region
+- Other urban areas of Mainland Tanzania
+- Rural areas of Mainland Tanzania
+- Urban areas of Zanzibar
+- Rural areas of Zanzibar
 
 ## Other noteworthy aspects
+
+### Definition of concept of employment
+
+Since the passing of the [resolution concerning statistics of work, employment and labour underutilization](https://www.ilo.org/global/statistics-and-databases/standards-and-guidelines/resolutions-adopted-by-international-conferences-of-labour-statisticians/WCMS_230304/lang--en/index.htm) in 2013 at the 19th International Conference of Labour Statisticians (ICLS) surveys are at risk of a series break due to the change in the concept of employment.
+
+In short, the ICLS 19 resolution restricts employment to *work performed for others in exchange for pay or profit*, meaning that own consumption work (e.g., subsistence agriculture or building housing for oneself) are not counted as employment.
+
+The GLD codes the harmonization’s `lstatus’ variable based on the concept used in the survey. In the case of the Tanzanian LFS this change occurs in 2020/21, when the survey switches to new definition. As a result, [time series data](Utilities/01_A_1_LFP_over_years.png) show a decrease in the size of employed and labor force participants for the 2020-21 round. However, the code can be altered to try to match the previous definition. The precise details are covered in a [separate document here](Converting%20between%20ICLS%20Definitions.md)
 
 ### Household ID
 
@@ -68,18 +82,11 @@ Meanwhile, changes in the second administrative level (subnatid2) occur as new r
 
 Industry variables are based on the ISIC version 2 for the 2000-01 round, and version 3 for the 2006 round, and version 4 for the 2014 and 2020-21 rounds. 
 
-Occupation variables are based entirely on the [Tanzanian Standard Classification of Occupations (TASCO)](Utilities/TASCO_CSN_1-10.pdf). The TASCO and ISCO 1988 are equivalent at the 2-digit level with the exception of TASCO codes "5100" and "5200", which are equivalent to ISCO 1988 codes "5200" and "5300", respectively. 
+Occupation variables are based entirely on the [Tanzanian Standard Classification of Occupations (TASCO)](Utilities/TASCO_CSN_1-10.pdf). The TASCO and ISCO 1988 are equivalent at the 2-digit level with the exception of TASCO codes "5200" and "5300", which are equivalent to ISCO 1988 codes "5100" and "5200", respectively. 
 
 ### Minimum age changes for education, labor and migration modules
 
 We defined the minimum age for labor, education and migration modules such that it is consistent with the [ILFS analytical reports](https://www.nbs.go.tz/index.php/en/census-surveys/labour-statistics). In the 2006, 2014, and 2020-21 datasets, the minimum age for all modules is 5 years old. Meanwhile, in 2000-01 round, we set the minimum age to 10 years old to be consistent with the NBS analytical report. It is worth noting that the 2000-01 ILFS has a separate dataset for the child labor module, which covers children aged 5 - 17. 
-
-### Using information on activities for household consumption
-
-The GLD definition of employed pertains to individuals who are engaged in activities for market production. The ILFS 2020-21 makes a distinction between activities engaged for own consumption and for sale in the market. We use this information to identify the employed individuals for this round.
-
-However, this distinction was not made in the earlier surveys so the size of employed is increased by the individuals who engage in activities for own consumption. As a result, [time series data](Utilities/01_A_1_LFP_over_years.png) show a decrease in the size of employed and labor force participants for the 2020-21 round. 
-
 
 ### Wage variable
 
