--- a/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
+++ b/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
@@ -78,6 +78,10 @@ For the purposes of consistency with official reports in terms of breaking down 
 
 Meanwhile, changes in the second administrative level (subnatid2) occur as new regions are created from other existing regions. In May 2002, Manyara region in Mainland Tanzania was split from Arusha. In March 2012, 2 new provinces were created: Njombe (from Iringa region), and Katavi (from Rukwa). Also, districts were re-assigned to different regions. Simiyu and Geita each had four districts that were transferred to Shinyanga, a district of Simiyu to Mwanza, and a district of Geita to Kagera.
 
+### Education codes
+
+There have been changes in the education system in both Mainland Tanzania and Zanzibar. In 2006, Zanzibar introduced reforms in the education system reducing the years of primary education from 7 to 6 and reducing entry age at the primary level from 7 years old to 6 years old. This has not been implemented until 2010. This has implications in coding the education levels. For more information on education codes, see (link). 
+
 ### Industry and Occupation codes in the ILFS
 
 Industry variables are based on the ISIC version 2 for the 2000-01 round, and version 3 for the 2006 round, and version 4 for the 2014 and 2020-21 rounds. 
