Update TZA education

--- a/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
+++ b/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
@@ -80,7 +80,9 @@ Meanwhile, changes in the second administrative level (subnatid2) occur as new r
 
 ### Education codes
 
-There have been changes in the education system in both Mainland Tanzania and Zanzibar. In 2006, Zanzibar introduced reforms in the education system reducing the years of primary education from 7 to 6 and reducing entry age at the primary level from 7 years old to 6 years old. This has not been implemented until 2010. This has implications in coding the education levels. For more information on education codes, see (link). 
+Tanzania has a complex education system with policy decided autonomously for Mainland Tanzania and Zanzibar. An education reform in 2006 introduced changes in Zanzibar reducing primary education from 7 years to 6 years, but this has not been implemented until 2010. Mainland Tanzania followed suit and began implementation of a similar scheme in 2016. But before 2010, and for the longest time, both Zanzibar and Mainland Tanzania operate under the same scheme. 
+
+These reforms have implications in coding the GLD education variables, specifically for "primary completed." The precise details on coding the education variables are covered in a [separate document here](Education%20system.md)
 
 ### Industry and Occupation codes in the ILFS
 
