--- a/Support/B - Country Survey Details/TZA/ILFS/Utilities/Readme
+++ b/Support/B - Country Survey Details/TZA/ILFS/Utilities/Readme
@@ -1,1 +1,1 @@
-This is to store images relating to TZA-ILFS survey details
+This is to store images and other supporting documents in the TZA-ILFS survey details
