--- a/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
+++ b/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
@@ -1,8 +1,8 @@
 
--   [Introduction to Thailand Labor Force Survey (THA
-    LFS)](#introduction-to-philippines-labor-force-survey-phl-lfs)
-    -   [What is the THA LFS?](#what-is-the-tha-lfs)
-    -   [What does the THA LFS cover?](#what-does-the-tha-lfs-cover)
+-   [Introduction to Rwanda Labor Force Survey (RWA
+    LFS)](#introduction-to-rwanda-labor-force-survey-rwa-lfs)
+    -   [What is the RWA LFS?](#what-is-the-rwa-lfs)
+    -   [What does the RWA LFS cover?](#what-does-the-rwa-lfs-cover)
     -   [Where can the data be found?](#where-can-the-data-be-found)
     -   [What is the sampling
         procedure?](#what-is-the-sampling-procedure)
@@ -10,106 +10,30 @@
         level?](#what-is-the-significance-level)
     -   [Other noteworthy aspects](#other-noteworthy-aspects)
 
-# Introduction to Thailand Labor Force Survey (THA LFS)
+# Introduction to Rwanda Labor Force Survey (RWA LFS)
 
-## What is the THA LFS?
+## What is the RWA LFS?
 
-The Rwanda LFS has been conducted by the National Institute of Statistics of Rwanda since August 2016.  It provides information about employment, industry, occupation, work hours, educational attainment and demographic characteristics in Rwanda.
+The Rwanda LFS has been conducted by the National Institute of Statistics of Rwanda since August 2016.  It is a quarterly survey that provides information on household roster characteristics, education, employment, primary and secondary economic activities in the past week, previous employment, own-use production of goods and services, and household assets. The questionnaire is based on the framework set by the 19th International Conference of Labor Statistics ("ICLS-19").
 
 ## What does the THA LFS cover?
 
 The Rwanda LFS is a labor force survey with information on demographic characteristics, education, and labor market activities over the past 7 days. The harmonized years and sample sizes used in the GLD harmonization are as follows:
 
 **Individual counts**
-| Year |      Q1     |       Q2      |       Q3      |     Q4     |   Full Year  |
-|------|:-----------:|:-------------:|:-------------:|:----------:|:------------:|
-| 1985 |     74,287  |       80,021  |       78,214  |            |     232,522  |
-| 1986 |             |     82,946    |     77,092    |            |   160,038    |
-| 1987 |     71,510  |     78,035    |     69,552    |            |   219,097    |
-| 1988 |     72,915  |               |     71,579    |            |   144,494    |
-| 1989 |     98,771  |   102,781     |     95,448    |            |   297,000    |
-| 1990 |             |               |     89,993    |            |     89,993   |
-| 1991 |     92,864  |     98,987    |     93,305    |            |   285,156    |
-| 1992 |     92,694  |     97,229    |     90,876    |            |   280,799    |
-| 1993 |     87,641  |               |     85,899    |            |   173,540    |
-| 1994 |   183,892   |     82,839    |   177,821     |            |   444,552    |
-| 1995 |   176,581   |               |   176,130     |            |   352,711    |
-| 1996 |   128,990   |     59,003    |   126,079     |            |   314,072    |
-| 1997 |   175,949   |               |   175,298     |            |   351,247    |
-| 1998 |   170,865   |     79,748    |   167,469     |   182,525  |   600,607    |
-| 1999 |   167,503   |   180,712     |   164,832     |   178,512  |   691,559    |
-| 2000 |   164,636   |   176,684     |   161,834     |   176,684  |   679,838    |
-| 2001 |   215,852   |   223,814     |   207,899     |   222,991  |   870,556    |
-| 2002 |   220,049   |   213,175     |   210,264     |   213,250  |   856,738    |
-| 2003 |   213,993   |   207,320     |   206,371     |   211,720  |   839,404    |
-| 2004 |   209,922   |   208,042     |   203,810     |   210,103  |   831,877    |
-| 2005 |   212,006   |   207,533     |   208,952     |   208,835  |   837,326    |
-| 2006 |   210,929   |   216,016     |   222,224     |   230,030  |   879,199    |
-| 2007 |   228,409   |   221,531     |   219,538     |   222,897  |   892,375    |
-| 2008 |   224,859   |   222,613     |   225,406     |   226,905  |   899,783    |
-| 2009 |   225,578   |   224,076     |   220,704     |   223,860  |   894,218    |
-| 2010 |   223,592   |   223,341     |   147,718     |   221,167  |   815,818    |
-| 2011 |   227,436   |   228,459     |   227,216     |   215,720  |   898,831    |
-| 2012 |   218,072   |   226,889     |   239,255     |            |   684,216    |
-| 2014 |   213,176   |   222,556     |   232,710     |   221,279  |   889,721    |
-| 2015 |   209,582   |   218,289     |   229,332     |   219,433  |   876,636    |
-| 2016 |   210,216   |   220,055     |   230,798     |   215,997  |   877,066    |
-| 2017 |   207,482   |   219,256     |   227,229     |   213,746  |   867,713    |
-| 2018 |   202,450   |   214,949     |   222,537     |   209,747  |   849,683    |
-| 2019 |   201,976   |   210,335     |   215,707     |   205,256  |   833,274    |
-| 2020 |   199,641   |   210,175     |   220,672     |   209,671  |   840,159    |
-| 2021 |   200,956   |   209,894     |   217,471     |   206,991  |   835,312    |
 
 **Household counts**
-| Year |       Q1       |       Q2       |       Q3       |       Q4       |     Full Year     |
-|------|:--------------:|:--------------:|:--------------:|:--------------:|:-----------------:|
-| 1985 |        17,239  |        17,366  |        17,951  |                |           52,556  |
-| 1986 |                |        17,655  |        18,345  |                |           36,000  |
-| 1987 |        17,065  |        17,230  |        16,718  |                |           51,013  |
-| 1988 |        17,045  |                |        16,919  |                |           33,964  |
-| 1989 |        24,257  |        23,975  |        23,725  |                |           71,957  |
-| 1990 |                |                |        22,618  |                |           22,618  |
-| 1991 |        23,998  |        24,204  |        24,292  |                |           72,494  |
-| 1992 |        24,713  |        24,657  |        24,401  |                |           73,771  |
-| 1993 |        23,735  |                |        23,435  |                |           47,170  |
-| 1994 |        50,654  |        21,522  |        49,312  |                |        121,488    |
-| 1995 |        49,287  |                |        49,183  |                |           98,470  |
-| 1996 |        49,423  |        21,033  |        48,650  |                |        119,106    |
-| 1997 |        48,400  |                |        48,611  |                |           97,011  |
-| 1998 |        48,422  |        21,186  |        47,768  |        49,077  |        166,453    |
-| 1999 |        48,123  |        49,161  |        47,671  |        49,175  |        194,130    |
-| 2000 |        47,911  |        48,824  |        47,562  |        48,824  |        193,121    |
-| 2001 |        63,038  |        62,822  |        61,584  |        63,083  |        250,527    |
-| 2002 |        63,598  |        62,342  |        62,448  |        62,947  |        251,335    |
-| 2003 |        62,923  |        61,131  |        61,283  |        62,006  |        247,343    |
-| 2004 |        61,960  |        61,383  |        61,179  |        62,645  |        247,167    |
-| 2005 |        63,361  |        62,061  |        62,890  |        62,792  |        251,104    |
-| 2006 |        63,839  |        65,911  |        68,172  |        70,157  |        268,079    |
-| 2007 |        69,762  |        68,041  |        68,072  |        68,422  |        274,297    |
-| 2008 |        69,089  |        68,783  |        70,058  |        70,436  |        278,366    |
-| 2009 |        69,884  |        69,382  |        68,630  |        69,452  |        277,348    |
-| 2010 |        69,604  |        69,716  |        46,690  |        69,523  |        255,533    |
-| 2011 |        76,500  |        79,858  |        79,980  |        68,905  |        305,243    |
-| 2012 |        73,883  |        73,536  |        73,652  |                |        221,071    |
-| 2014 |        73,972  |        73,983  |        73,390  |        73,281  |        294,626    |
-| 2015 |        73,820  |        73,502  |        73,086  |        73,068  |        293,476    |
-| 2016 |        74,035  |        74,218  |        73,770  |        72,949  |        294,972    |
-| 2017 |        74,113  |        74,332  |        73,456  |        72,788  |        294,689    |
-| 2018 |        73,738  |        74,428  |        73,560  |        73,204  |        294,930    |
-| 2019 |        74,513  |        74,155  |        73,103  |        72,895  |        294,666    |
-| 2020 |        74,502  |        73,970  |        73,892  |        72,973  |        295,337    |
-| 2021 |        74,981  |        74,865  |        73,422  |        73,286  |        296,554    |
 
 
 ## Where can the data be found?
 
-The datasets are not accessible to the public and researchers have to request the data from the Rwanda National Institute of Statistics. The World Bank has been granted access to the datasets, if you work or are part of the World Bank Group, kindly contact the Jobs Group with a formal request for access to gld@worldbank.org
+The datasets are accessible to the public and researchers have to detail their purposes of using data to the [Rwanda National Institute of Statistics](https://microdata.statistics.gov.rw/index.php/catalog). The World Bank has been granted access to the datasets, if you work or are part of the World Bank Group, kindly contact the Jobs Group with a formal request for access to gld@worldbank.org
 
 ## What is the sampling procedure?
 
-The LFS is designed as a stratified two-stage sampling survey. Bangkok Metropolis and the 76 provinces constituted the strata. The strata were each divided by municipal and non-municipal area. The primary sampling units were the enumeration areas for municipal and non-municipal areas. The secondary sampling units were the private households and persons in the collective households. From 2011 onwards, the sampling frame is based on the 2010 census.
+The LFS is designed as a stratified two-stage sampling survey. All 30 districts of Rwanda, subdivided into urban and rural constitute the strata. The primary sampling units were selected with probability proportional to size from enumeration areas laid out in the 2012 Census sampling frame. There were 16 households sampled in each enumeration area (EA), except when there are fewer than 16 households living in the EA. 
 
-Since 2002, the Thailand LFS adopted a [rotation sampling design](utilities/THA_LFS_methodology.pdf). The sampling plan is designed with 4 rotation groups with a 2-2-2 pattern. The samples of villages are divided into 4 rotation groups, which result in the number of PSUs in a province to be equal to a one-fourth of the that of total PSUs. Two household sample sets are selected in each PSU and each is interviewed for two rounds of the survey. This results in the repetition of sample households for two quarters. Beginning 2011, a new rotation was pattern was adopted where the primary sampling units are divided into 11 PSU sets, and 4 sets of households were selected to give a total of 44 household sample sets. 
+The Rwanda LFS uses a rotation sampling design that differs between the 2016-2018 and 2019-2021 rounds. In the 2016-18 rounds, the sample is split equally into four rotation groups where one group is replaced by a new one every round. Thus, on a round-to-round basis, 75% of the sample is retained. In the rounds starting February 2019, the design follows a 1-1-1 scheme such that each household is interviewed every other quarter. 
 
 ## What is the significance level?
 
@@ -119,7 +43,7 @@ The official reports detail results by gender, area of residence (urban or rural
 
 ### Household ID
 
-The datasets received do not contain ID information. In the GLD project, we have created IDs to provide the best user experience based on geographic identifiers. The household ID is formed based on information on region, province, area of residence or sector, district, village block number, and household number. 
+The datasets received contain ID information. In the GLD project, we have created IDs to provide the best user experience based on geographic identifiers. The household ID is formed based on information on region, province, area of residence or sector, district, village block number, and household number. 
 
 ### Geographic Information
 
