Add link to NADA and NBS

--- a/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
+++ b/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
@@ -32,9 +32,12 @@ The harmonized years and sample sizes used in the GLD harmonization are:
 
 ## Where can the data be found?
 
-The datasets are not accessible to the public and researchers have to request the data from the National Bureau of Statistics. The World Bank has been granted access to the datasets, if you work or are part of the World Bank Group, kindly contact the Jobs Group with a formal request for access to gld@worldbank.org.
+The datasets are not accessible to the public and researchers have to request the data from the National Bureau of Statistics. The World Bank has been granted access to the datasets, if you work or are part of the World Bank Group, kindly contact the Jobs Group with a formal request for access to gld@worldbank.org. 
 
 Most of the raw datasets were received in Stata .dta format except for the 2014 (Mainland Tanzania) and 2020 rounds which were received as SPSS .sav files and were converted to Stata .dta files. 
+
+For more information on the datasets, refer to the [Tanzania National Data Archive](https://www.nbs.go.tz/tnada/index.php/catalog/34) or the Tanzania NBS's labor statistics [section](https://www.nbs.go.tz/index.php/en/census-surveys/labour-statistics)
+
 
 ## What is the sampling procedure?
 
