Update 1. Introduction to Ethiopian LFS.md

--- a/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
+++ b/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
@@ -22,8 +22,8 @@ Years and sample size of LFS harmonized for GLD are:
 | :------:	| :-------:		| :-------:	 	| :-------:	 	| :-------:	|
 | [1999](utilities/ETH_1999_LFS_report.pdf)  | 81,339        | 366,274      |  54,430,917  |   81,473   |
 | [2005](utilities/Labour_force_survey_Final_Report_2005.pdf)  | 54,443        | 230,680      |  63,228,599  |   54,484   |
-| [2013](utilities/nlfs_analytical_report labor_force _2013.pdf)  | 58,321        | 240,660      |  80,444,148  |   58,396   |
-| [2021](utilities/FINAL_STATISTICAL_REPORT_ON_THE_202_ LMS_(003).doc)  | 43,329        | 174,613      |  98,035,894 |    49,916   |
+| [2013](utilities/nlfs_analytical_report labor_force_2013)  | 58,321        | 240,660      |  80,444,148  |   58,396   |
+| [2021](utilities/FINAL_STATISTICAL_REPORT_ON_THE_202_ LMS_(003))  | 43,329        | 174,613      |  98,035,894 |    49,916   |
 
 1992 and 2009 do not have annual reports publicly available online, therefore, official number of sample size for these two years are missing.
 
