--- a/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
+++ b/Support/B - Country Survey Details/TZA/ILFS/1. Introduction to TZA ILFS.md
@@ -83,6 +83,8 @@ For the purposes of consistency with official reports in terms of breaking down 
 
 Meanwhile, changes in the second administrative level (subnatid2) occur as new regions are created from other existing regions. In May 2002, Manyara region in Mainland Tanzania was split from Arusha. In March 2012, 2 new provinces were created: Njombe (from Iringa region), and Katavi (from Rukwa). Also, districts were re-assigned to different regions. Simiyu and Geita each had four districts that were transferred to Shinyanga, a district of Simiyu to Mwanza, and a district of Geita to Kagera.
 
+For detailed information on the district re-assignments, refer to this [file](Utilities/Region_changes.xlsx).
+
 ### Education codes
 
 Tanzania has a complex education system with policy decided autonomously for Mainland Tanzania and Zanzibar. An education reform in 2006 introduced changes in Zanzibar reducing primary education from 7 years to 6 years, but this has not been implemented until 2010. Mainland Tanzania followed suit and began implementation of a similar scheme in 2016. But before 2010, and for the longest time, both Zanzibar and Mainland Tanzania operate under the same scheme. 
