Update 1. Introduction to Ethiopian LFS.md

--- a/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
+++ b/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
@@ -43,15 +43,12 @@ More details of the sampling frame & procedure are included in each year's annua
 
 ```
 For the purpose of the survey the country was divided into three broad categories. That is; rural, major urban center and other urban center categories.
+
 Category I: Rural: - This category consists of the rural areas of nine regions and one rural part of city administration found in the country. Regarding the survey domains, each region or city administration was considered to be a domain (Reporting Level) for which major findings of the survey are reported. This category totally comprises 10 reporting levels. A stratified two-stage cluster sample design was used to select samples in which the primary sampling units (PSUs) were EAs. Households per sample EA were selected as a second Stage Sampling Unit (SSSU) and the survey questionnaire finally administered to all members of sample households.
 
-Category II:- Major urban centers:- In this category all regional capitals and 15 other major urban centers that had a population size of 100,000 or more in 2007 were included. Each urban center in this category was considered as a reporting level.
+Category II:- Major urban centers:- In this category all regional capitals and 15 other major urban centers that had a population size of 100,000 or more in 2007 were included. Each urban center in this category was considered as a reporting level.This category has totally 26 reporting levels. In this category too, in order to select the samples, a stratified two-stage cluster sample design was implemented. The primary sampling units were EAs. Households from each sample EA were then selected as a Second Stage Unit.
 
-This category has totally 26 reporting levels. In this category too, in order to select the samples, a stratified two-stage cluster sample design was implemented. The primary sampling units were EAs. Households from each sample EA were then selected as a Second Stage Unit.
-
-Category III: - Other urban centers: Urban centers in the country other than those under category II were grouped into this category. Harari, Addis Ababa and Dire Dawa do not have urban centers other than that grouped in category II. Hence, no domain was formed for these regions under this category.
-
-Unlike the above two categories a stratified three stage cluster sample design was adopted to select samples from this category. The primary sampling units were urban centers, the second stage sampling units were EAs and Households from each EA were finely selected at the third stage and the survey questionnaires administered for all of them.
+Category III: - Other urban centers: Urban centers in the country other than those under category II were grouped into this category. Harari, Addis Ababa and Dire Dawa do not have urban centers other than that grouped in category II. Hence, no domain was formed for these regions under this category. Unlike the above two categories a stratified three stage cluster sample design was adopted to select samples from this category. The primary sampling units were urban centers, the second stage sampling units were EAs and Households from each EA were finely selected at the third stage and the survey questionnaires administered for all of them.
 
 ```    
 
