Update 1. Introduction to Ethiopian LFS.md

--- a/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
+++ b/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
@@ -55,42 +55,10 @@ Category III: - Other urban centers: Urban centers in the country other than tho
 
 ## What is the geographic significance level?
 
-****************
-*** COMMENT ***
-text above says 1992 is only national (urban rural) the table below says it is province. Please confirm which one it is.
-Also: for 2005 onward at least it is province + urban / rural
-****************
-
-The official reports detailed results by gender, sector (i.e. urban or rural), and the four main provinces in Pakistan – Punjab, Sindh, the North-West Frontier Province(N.W.F.P.), and Balochistan. Among the raw datasets of all LFSs, 2010, 2014, 2017, and 2018 are the only four years that contain more than the four major provinces. The table below shows provinces included in each year and the geographic significance level.
-
-| **Year**	| **Province Covered**	| **Historical Change**	|
-| :------:	| :-------------------: | :-------------------:	|
-| 1992  | Punjab/Sindh/NWFP/Balochistan | N/A |  
-| 1999  | Punjab/Sindh/NWFP/Balochistan | N/A |  
-| 2001  | Punjab/Sindh/NWFP/Balochistan | N/A |
-| 2003  | Punjab/Sindh/NWFP/Balochistan | N/A |
-| 2005  | Punjab/Sindh/NWFP/Balochistan | N/A |
-| 2007  | Punjab/Sindh/NWFP/Balochistan | N/A |
-| 2008  | Punjab/Sindh/NWFP/Balochistan | N/A |  
-| 2009  | Punjab/Sindh/NWFP/Balochistan | N/A |  
-| 2010  | Punjab/Sindh/KP/Balochistan/AK,Kashmir/GB | The name of NWFP changed to Khyber Pakhtunkhwa (or K/P province)|  
-| 2012  | Punjab/Sindh/NWFP/Balochistan | N/A |  
-| 2013  | Punjab/Sindh/NWFP/Balochistan | N/A |
-| 2014  | Punjab/Sindh/KP/Balochistan/Islamabad| N/A |
-| 2017  | Punjab/Sindh/KP/Balochistan/Islamabad| N/A |
-| 2018  | Punjab/Sindh/KP/Balochistan/Islamabad| Federally Administered Tribal Areas, or "FATA" was merged into K/P|
-| 2020  | Punjab/Sindh/KP/Balochistan   | N/A |  
+The official reports detailed results by gender, sector (i.e. urban or rural), and regions in Ethiopia. For all four years, they are representative at the urban/rural division of each region level. Therefore, we coded `subnatidsurvey` as a combination of region and urban/rural status, i.e. Affar-rural vs. Affar-urban. 
 
 
-## Other noteworthy aspects
-
-
-### Definition of Labor Status and Labor Force Participation
-
-LFS has its own conception and definition documentation for variables. These documents can be found on the International Labour Organization data catalog [website](https://www.ilo.org/surveyLib/index.php/catalog/?page=1&from=2000&to=2020&ps=15). When coding GLD variable `lstatus` and `potential_lf`, we need to adapt GLD definition for *being employed* and *unemployed* to fit LFS's own definition, and more often, this requires us to expand GLD definition.
-
-Earlier years before 2012 are coded slightly differently from other years as they have less labor questions. A more comprehensive explanation of the harmonization choices [is covered here in a separate document](Labor_Status_and_Labor_Force_Participation.md).    
-
+## Other noteworthy aspects  
 
 ### Coding of industry and occupation codes
 
