Update 1. Introduction to Ethiopian LFS.md

--- a/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
+++ b/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
@@ -62,14 +62,17 @@ The official reports detailed results by gender, sector (i.e. urban or rural), a
 
 ### Coding of industry and occupation codes
 
+In general, so far we do not have information on the version of Ethiopia's National Occupation and Industry Classifications (NOIC). The full codebooks of NOIC and its history of change are unkown to us. The only version er know for sure is NOIC 1994 which is used for LFS 1999. The codebook of NOIC 1994 can be found [here.](utilities/ETH_national_mappings_1999.xlsx) 
+
+
+
 Regarding industrial classification, 3 versions of Pakistani Standard Industrial Classification (PSIC) were involved from 1992 to 2020 – PSIC 1970, 2007, 2010. They are based on different versions of ISIC and were used in different years of LFS. in the [separate document.](Correspondence_National_International_Classifications.md)
 
-Although three versions of Pakistani Standard Occupational Codes (PSCO) were involved – PSCO 1994, 2011, and 2015, they are based on two versions of international standards which are ISCO 1988 AND 2008. PSCO 1994 follows ISCO 1988 whereas PSCO 2011 and 2015 follow ISCO 2008.
 
 In general, each single version of national standards, regardless of industry or occupation, is almost identical to their international counterparts at two-digit level. Details about industrial and occuaptional mappings are covered in this [separate document.](Correspondence_National_International_Classifications.md)
 
 
-### Helper files for district, migration country, and training field coding
+### Helper files for region, zone and wereda naming
 
 We created several codelist for `subnatid2`, `migrated_from_code`, and `vocational_field_orig` according to PBS's coding scheme for each year. These files and their use can be found in the table below.
 
